Hot fixed z-index dropdown menu

--- a/public/style.css
+++ b/public/style.css
@@ -27121,6 +27121,26 @@ video {
   z-index: 50;
 }
 
+.z-60 {
+  z-index: 60;
+}
+
+.z-70 {
+  z-index: 70;
+}
+
+.z-80 {
+  z-index: 80;
+}
+
+.z-90 {
+  z-index: 90;
+}
+
+.z-100 {
+  z-index: 100;
+}
+
 .z-auto {
   z-index: auto;
 }
@@ -27149,6 +27169,26 @@ video {
   z-index: 50;
 }
 
+.focus-within\:z-60:focus-within {
+  z-index: 60;
+}
+
+.focus-within\:z-70:focus-within {
+  z-index: 70;
+}
+
+.focus-within\:z-80:focus-within {
+  z-index: 80;
+}
+
+.focus-within\:z-90:focus-within {
+  z-index: 90;
+}
+
+.focus-within\:z-100:focus-within {
+  z-index: 100;
+}
+
 .focus-within\:z-auto:focus-within {
   z-index: auto;
 }
@@ -27175,6 +27215,26 @@ video {
 
 .focus\:z-50:focus {
   z-index: 50;
+}
+
+.focus\:z-60:focus {
+  z-index: 60;
+}
+
+.focus\:z-70:focus {
+  z-index: 70;
+}
+
+.focus\:z-80:focus {
+  z-index: 80;
+}
+
+.focus\:z-90:focus {
+  z-index: 90;
+}
+
+.focus\:z-100:focus {
+  z-index: 100;
 }
 
 .focus\:z-auto:focus {
@@ -57737,6 +57797,26 @@ video {
     z-index: 50;
   }
 
+  .sm\:z-60 {
+    z-index: 60;
+  }
+
+  .sm\:z-70 {
+    z-index: 70;
+  }
+
+  .sm\:z-80 {
+    z-index: 80;
+  }
+
+  .sm\:z-90 {
+    z-index: 90;
+  }
+
+  .sm\:z-100 {
+    z-index: 100;
+  }
+
   .sm\:z-auto {
     z-index: auto;
   }
@@ -57765,6 +57845,26 @@ video {
     z-index: 50;
   }
 
+  .sm\:focus-within\:z-60:focus-within {
+    z-index: 60;
+  }
+
+  .sm\:focus-within\:z-70:focus-within {
+    z-index: 70;
+  }
+
+  .sm\:focus-within\:z-80:focus-within {
+    z-index: 80;
+  }
+
+  .sm\:focus-within\:z-90:focus-within {
+    z-index: 90;
+  }
+
+  .sm\:focus-within\:z-100:focus-within {
+    z-index: 100;
+  }
+
   .sm\:focus-within\:z-auto:focus-within {
     z-index: auto;
   }
@@ -57791,6 +57891,26 @@ video {
 
   .sm\:focus\:z-50:focus {
     z-index: 50;
+  }
+
+  .sm\:focus\:z-60:focus {
+    z-index: 60;
+  }
+
+  .sm\:focus\:z-70:focus {
+    z-index: 70;
+  }
+
+  .sm\:focus\:z-80:focus {
+    z-index: 80;
+  }
+
+  .sm\:focus\:z-90:focus {
+    z-index: 90;
+  }
+
+  .sm\:focus\:z-100:focus {
+    z-index: 100;
   }
 
   .sm\:focus\:z-auto:focus {
@@ -88288,6 +88408,26 @@ video {
     z-index: 50;
   }
 
+  .md\:z-60 {
+    z-index: 60;
+  }
+
+  .md\:z-70 {
+    z-index: 70;
+  }
+
+  .md\:z-80 {
+    z-index: 80;
+  }
+
+  .md\:z-90 {
+    z-index: 90;
+  }
+
+  .md\:z-100 {
+    z-index: 100;
+  }
+
   .md\:z-auto {
     z-index: auto;
   }
@@ -88316,6 +88456,26 @@ video {
     z-index: 50;
   }
 
+  .md\:focus-within\:z-60:focus-within {
+    z-index: 60;
+  }
+
+  .md\:focus-within\:z-70:focus-within {
+    z-index: 70;
+  }
+
+  .md\:focus-within\:z-80:focus-within {
+    z-index: 80;
+  }
+
+  .md\:focus-within\:z-90:focus-within {
+    z-index: 90;
+  }
+
+  .md\:focus-within\:z-100:focus-within {
+    z-index: 100;
+  }
+
   .md\:focus-within\:z-auto:focus-within {
     z-index: auto;
   }
@@ -88342,6 +88502,26 @@ video {
 
   .md\:focus\:z-50:focus {
     z-index: 50;
+  }
+
+  .md\:focus\:z-60:focus {
+    z-index: 60;
+  }
+
+  .md\:focus\:z-70:focus {
+    z-index: 70;
+  }
+
+  .md\:focus\:z-80:focus {
+    z-index: 80;
+  }
+
+  .md\:focus\:z-90:focus {
+    z-index: 90;
+  }
+
+  .md\:focus\:z-100:focus {
+    z-index: 100;
   }
 
   .md\:focus\:z-auto:focus {
@@ -118839,6 +119019,26 @@ video {
     z-index: 50;
   }
 
+  .lg\:z-60 {
+    z-index: 60;
+  }
+
+  .lg\:z-70 {
+    z-index: 70;
+  }
+
+  .lg\:z-80 {
+    z-index: 80;
+  }
+
+  .lg\:z-90 {
+    z-index: 90;
+  }
+
+  .lg\:z-100 {
+    z-index: 100;
+  }
+
   .lg\:z-auto {
     z-index: auto;
   }
@@ -118867,6 +119067,26 @@ video {
     z-index: 50;
   }
 
+  .lg\:focus-within\:z-60:focus-within {
+    z-index: 60;
+  }
+
+  .lg\:focus-within\:z-70:focus-within {
+    z-index: 70;
+  }
+
+  .lg\:focus-within\:z-80:focus-within {
+    z-index: 80;
+  }
+
+  .lg\:focus-within\:z-90:focus-within {
+    z-index: 90;
+  }
+
+  .lg\:focus-within\:z-100:focus-within {
+    z-index: 100;
+  }
+
   .lg\:focus-within\:z-auto:focus-within {
     z-index: auto;
   }
@@ -118893,6 +119113,26 @@ video {
 
   .lg\:focus\:z-50:focus {
     z-index: 50;
+  }
+
+  .lg\:focus\:z-60:focus {
+    z-index: 60;
+  }
+
+  .lg\:focus\:z-70:focus {
+    z-index: 70;
+  }
+
+  .lg\:focus\:z-80:focus {
+    z-index: 80;
+  }
+
+  .lg\:focus\:z-90:focus {
+    z-index: 90;
+  }
+
+  .lg\:focus\:z-100:focus {
+    z-index: 100;
   }
 
   .lg\:focus\:z-auto:focus {
@@ -149390,6 +149630,26 @@ video {
     z-index: 50;
   }
 
+  .xl\:z-60 {
+    z-index: 60;
+  }
+
+  .xl\:z-70 {
+    z-index: 70;
+  }
+
+  .xl\:z-80 {
+    z-index: 80;
+  }
+
+  .xl\:z-90 {
+    z-index: 90;
+  }
+
+  .xl\:z-100 {
+    z-index: 100;
+  }
+
   .xl\:z-auto {
     z-index: auto;
   }
@@ -149418,6 +149678,26 @@ video {
     z-index: 50;
   }
 
+  .xl\:focus-within\:z-60:focus-within {
+    z-index: 60;
+  }
+
+  .xl\:focus-within\:z-70:focus-within {
+    z-index: 70;
+  }
+
+  .xl\:focus-within\:z-80:focus-within {
+    z-index: 80;
+  }
+
+  .xl\:focus-within\:z-90:focus-within {
+    z-index: 90;
+  }
+
+  .xl\:focus-within\:z-100:focus-within {
+    z-index: 100;
+  }
+
   .xl\:focus-within\:z-auto:focus-within {
     z-index: auto;
   }
@@ -149444,6 +149724,26 @@ video {
 
   .xl\:focus\:z-50:focus {
     z-index: 50;
+  }
+
+  .xl\:focus\:z-60:focus {
+    z-index: 60;
+  }
+
+  .xl\:focus\:z-70:focus {
+    z-index: 70;
+  }
+
+  .xl\:focus\:z-80:focus {
+    z-index: 80;
+  }
+
+  .xl\:focus\:z-90:focus {
+    z-index: 90;
+  }
+
+  .xl\:focus\:z-100:focus {
+    z-index: 100;
   }
 
   .xl\:focus\:z-auto:focus {
@@ -179941,6 +180241,26 @@ video {
     z-index: 50;
   }
 
+  .\32xl\:z-60 {
+    z-index: 60;
+  }
+
+  .\32xl\:z-70 {
+    z-index: 70;
+  }
+
+  .\32xl\:z-80 {
+    z-index: 80;
+  }
+
+  .\32xl\:z-90 {
+    z-index: 90;
+  }
+
+  .\32xl\:z-100 {
+    z-index: 100;
+  }
+
   .\32xl\:z-auto {
     z-index: auto;
   }
@@ -179969,6 +180289,26 @@ video {
     z-index: 50;
   }
 
+  .\32xl\:focus-within\:z-60:focus-within {
+    z-index: 60;
+  }
+
+  .\32xl\:focus-within\:z-70:focus-within {
+    z-index: 70;
+  }
+
+  .\32xl\:focus-within\:z-80:focus-within {
+    z-index: 80;
+  }
+
+  .\32xl\:focus-within\:z-90:focus-within {
+    z-index: 90;
+  }
+
+  .\32xl\:focus-within\:z-100:focus-within {
+    z-index: 100;
+  }
+
   .\32xl\:focus-within\:z-auto:focus-within {
     z-index: auto;
   }
@@ -179995,6 +180335,26 @@ video {
 
   .\32xl\:focus\:z-50:focus {
     z-index: 50;
+  }
+
+  .\32xl\:focus\:z-60:focus {
+    z-index: 60;
+  }
+
+  .\32xl\:focus\:z-70:focus {
+    z-index: 70;
+  }
+
+  .\32xl\:focus\:z-80:focus {
+    z-index: 80;
+  }
+
+  .\32xl\:focus\:z-90:focus {
+    z-index: 90;
+  }
+
+  .\32xl\:focus\:z-100:focus {
+    z-index: 100;
   }
 
   .\32xl\:focus\:z-auto:focus {
